Fix listcart not showing up on mobile devices

--- a/src/components/style/ListCart.scss
+++ b/src/components/style/ListCart.scss
@@ -32,6 +32,7 @@ $break-small: 30em;
     margin: 1em 0;
     &>.list {
       max-width: 100%;
+      display: block;
     }
   }
 }
